--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/fiber": "^8.15.16",
     "@types/three": "^0.161.2",
     "animate.css": "^4.1.1",
+    "axios": "^1.6.7",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
